--- a/index.html
+++ b/index.html
@@ -41,5 +41,13 @@
    </div>
   </div>
 
+  <script>
+    const oddItems = document.querySelectorAll("#items .list-group-item:nth-child(odd)");
+    oddItems.forEach(item => {
+      item.style.backgroundColor = "green";
+    });
+  </script>
+  
+
 </body>
 </html>
